# destin

./: .gitignore  .gitmodules
Destin/: .gitignore  CMakeLists.txt  run_tests.sh
Destin/Bindings/: swig_destin_common.i
Destin/Bindings/Java/: .gitignore  CMakeLists.txt  groovy_run.sh  swig_destin_java.i
Destin/Bindings/Java/groovy_proj/src/: Grapher.groovy  Main.java  TreeminerExperiment.groovy  tree_miner_exp.groovy
Destin/Bindings/Python/: CMakeLists.txt  FindNumPy.cmake  ZCA.py  dostuff.py  moving_square.m4v  numpy.i  object_tracking.py  pca.py  swig_destin_python.i  train_nn.py  video_labler.py
Destin/Common/: .gitignore  BeliefExporter.h  CMakeLists.txt  DestinNetworkAlt.cpp  DestinNetworkAlt.h  DestinTreeIteratorCallback.h  DestinTreeManager.cpp  DestinTreeManager.h  OpenCogAtomGenerator.cpp  TestDestinNetworkAlt.cpp  VideoSource.cpp  VideoSource.h  generate_atoms.sh  openCogAtomGenerator-README.md  predicates.scm  unit_test.h
Destin/DavisDestin/: CMakeLists.txt
Destin/DavisDestin/include/: destin.h
Destin/DavisDestin/src/: destin.c  node.c  util.c
Destin/DavisDestin/test/: test.c
Destin/Misc/: CMakeLists.txt
Destin/TreeMining/: CMakeLists.txt
